SRC/compilers/ccomp/y.output
Grammar

    0 $accept: program $end

    1 program: init_outerscope outer_decls opt_main_decl
    2        | init_outerscope opt_main_decl

    3 init_outerscope: %empty

    4 outer_decls: outer_decl
    5            | outer_decls outer_decl

    6 outer_decl: include_decl
    7           | function_decl
    8           | monitor_decl
    9           | type_decl
   10           | const_decl
   11           | var_decl
   12           | extern_decl

   13 include_decl: start_include FNSTRING

   14 start_include: '#' INCLUDE

   15 opt_main_decl: %empty
   16              | main_hdr compound_stmt

   17 main_hdr: opt_main_type MAIN '(' ')'

   18 opt_main_type: %empty
   19              | INT
   20              | VOID

   21 compound_stmt: '{' var_ext_decls stmt_list '}'
   22              | '{' stmt_list '}'
   23              | '{' '}'

   24 function_decl: func_proto compound_stmt

   25 func_proto: func_hdr
   26           | ATOMIC func_hdr

   27 func_hdr: untyped_func_hdr
   28         | typed_func_hdr

   29 untyped_func_hdr: function_id formal_params

   30 typed_func_hdr: VOID function_id formal_params
   31               | var_typespec function_id formal_params

   32 function_id: IDENTIFIER

   33 formal_params: '(' param_list ')'

   34 param_list: %empty
   35           | VOID
   36           | param_groups

   37 param_groups: param_group
   38             | param_groups ',' param_group

   39 param_group: param_typespec newident

   40 param_typespec: var_typespec
   41               | var_typespec '&'
   42               | STRING

   43 monitor_decl: monitor_hdr '{' mon_internal_decls '}'

   44 monitor_hdr: MONITOR newident

   45 mon_internal_decls: internal_decls monitor_init

   46 internal_decls: internal_decl
   47               | internal_decls internal_decl

   48 internal_decl: function_decl
   49              | const_decl
   50              | var_decl

   51 monitor_init: %empty
   52             | the_init '{' stmt_list '}'

   53 the_init: INIT

   54 extern_mon_spec: monitor_hdr '{' mon_func_protos '}'

   55 mon_func_protos: func_proto ';'
   56                | mon_func_protos func_proto ';'

   57 var_ext_decls: var_ext_decl
   58              | var_ext_decls var_ext_decl

   59 var_ext_decl: var_decl
   60             | extern_decl

   61 var_decl: var_typespec var_list ';'

   62 var_typespec: INT
   63             | CHAR
   64             | STRING '[' unsigned_const ']'
   65             | ident

   66 var_list: var_name
   67         | var_list ',' var_name

   68 var_name: newident
   69         | newident '=' constant
   70         | array_decl

   71 array_decl: newident index_list

   72 index_list: index
   73           | index_list index

   74 index: '[' unsigned_const ']'

   75 type_decl: the_typedef var_typespec newident ';'
   76          | the_typedef var_typespec array_decl ';'

   77 the_typedef: TYPEDEF

   78 const_decl: CONST var_typespec newident '=' constant ';'

   79 constant: unsigned_const
   80         | '-' unsigned_const
   81         | '+' unsigned_const
   82         | CHARCON

   83 unsigned_const: unsigned_num
   84               | ident

   85 unsigned_num: UNSIGNED_INT

   86 extern_decl: extern_func_decl
   87            | extern_var_decl
   88            | extern_array_decl
   89            | extern_mon_decl

   90 extern_func_decl: the_extern func_proto ';'

   91 the_extern: EXTERN

   92 extern_var_decl: the_extern var_decl

   93 extern_array_decl: the_extern array_decl

   94 extern_mon_decl: the_extern extern_mon_spec

   95 stmt_list: stmt
   96          | stmt_list stmt
   97          | error ';'
   98          | error '}'

   99 opt_for_expr_list: %empty
  100                  | for_expr_list

  101 for_expr_list: expr
  102              | for_expr_list ',' expr

  103 stmt: selection_stmt
  104     | compound_stmt
  105     | cobegin_stmt
  106     | iteration_stmt
  107     | expr_stmt
  108     | continue_stmt
  109     | break_stmt
  110     | return_stmt
  111     | output_stmt
  112     | input_stmt
  113     | null_stmt
  114     | special_proc_calls

  115 special_proc_calls: send_call
  116                   | broadcast_call
  117                   | sprintf_call

  118 send_call: SEND left_exprparm ',' expr ')' ';'

  119 left_exprparm: '(' rawstring_parm
  120              | '(' expr

  121 broadcast_call: BROADCAST single_exprparm

  122 sprintf_call: sprintf_buf_fmt ',' sprintf_parmlist ')'

  123 sprintf_buf_fmt: SPRINTF '(' expr ',' rawstring_parm

  124 sprintf_parmlist: expr
  125                 | sprintf_parmlist ',' expr

  126 selection_stmt: if_expr then_stmt
  127               | if_expr then_stmt the_else stmt
  128               | switch_hdr '{' case_groups opt_default '}'

  129 if_expr: IF '(' expr ')'

  130 then_stmt: stmt

  131 the_else: ELSE

  132 switch_hdr: SWITCH '(' expr ')'

  133 case_groups: case_group
  134            | case_groups case_group

  135 case_group: case_hdr_list patch_case_hdrs stmt_list

  136 case_hdr_list: case_hdr
  137              | case_hdr_list case_hdr

  138 case_hdr: CASE begin_case expr ':'

  139 begin_case: %empty

  140 patch_case_hdrs: %empty

  141 opt_default: %empty
  142            | the_default stmt_list

  143 the_default: DEFAULT ':'

  144 cobegin_stmt: cbegin '{' stmt_list '}'

  145 iteration_stmt: the_while while_expr stmt
  146               | the_do do_stmt_loc stmt the_do_while do_while_expr ';'
  147               | for_init opt_continue_expr for_semic2 opt_iter_exprs ')' stmt

  148 the_while: WHILE

  149 while_expr: '(' expr ')'

  150 the_do: DO

  151 do_stmt_loc: %empty

  152 the_do_while: WHILE

  153 do_while_expr: '(' expr ')'

  154 for_init: the_for opt_for_expr_list ';'

  155 the_for: FOR '('

  156 opt_continue_expr: %empty
  157                  | expr

  158 for_semic2: ';'

  159 opt_iter_exprs: %empty
  160               | for_expr_list

  161 cbegin: CBEGIN

  162 continue_stmt: CONTINUE ';'

  163 break_stmt: BREAK ';'

  164 return_stmt: the_return opt_expr ';'

  165 the_return: RETURN

  166 output_stmt: COUT output_list ';'

  167 output_list: LTLT output_item
  168            | output_list LTLT output_item

  169 output_item: expr
  170            | ENDL
  171            | RAWSTRING

  172 input_stmt: CIN GTGT expr ';'

  173 null_stmt: ';'

  174 opt_expr: %empty
  175         | expr

  176 expr_stmt: expr ';'

  177 expr: logical_or_expr
  178     | var_assign

  179 var_assign: id_becomes expr
  180           | array_var_becomes expr

  181 id_becomes: ident '='

  182 array_var_becomes: array_var '='

  183 logical_or_expr: logical_and_expr
  184                | left_logical_or_expr OR logical_and_expr

  185 left_logical_or_expr: logical_or_expr

  186 logical_and_expr: relational_expr
  187                 | left_logical_and_expr AND relational_expr

  188 left_logical_and_expr: logical_and_expr

  189 relational_expr: simple_expr
  190                | left_relational_expr relational_op simple_expr

  191 left_relational_expr: simple_expr

  192 relational_op: EQ
  193              | '<'
  194              | '>'
  195              | LE
  196              | GE
  197              | NE

  198 simple_expr: term
  199            | '+' term
  200            | '-' term
  201            | left_simple_expr add_op term

  202 left_simple_expr: simple_expr

  203 add_op: '+'
  204       | '-'

  205 term: factor
  206     | left_term mult_op factor

  207 left_term: term

  208 mult_op: '*'
  209        | '/'
  210        | '%'

  211 factor: variable
  212       | unsigned_num
  213       | CHARCON
  214       | '(' expr ')'
  215       | '!' factor

  216 variable: var_ident
  217         | var_ident PLPL
  218         | PLPL var_ident
  219         | var_ident MIMI
  220         | MIMI var_ident
  221         | func_call
  222         | array_var
  223         | typecast

  224 var_ident: ident

  225 func_call: func_id actual_params
  226          | stringfn_call
  227          | receive_call

  228 func_id: ident

  229 actual_params: '(' ')'
  230              | '(' actuals_list ')'

  231 actuals_list: actuals_list ',' actual_param
  232             | actual_param

  233 actual_param: expr

  234 stringfn_call: stringconcat_call
  235              | stringcopy_call
  236              | stringcompare_call
  237              | stringlength_call
  238              | sscanf_call

  239 stringconcat_call: STRINGCONCAT left_exprparm right_stringparm

  240 right_stringparm: ',' expr ')'
  241                 | ',' rawstring_parm ')'

  242 rawstring_parm: RAWSTRING

  243 stringcopy_call: STRINGCOPY left_exprparm right_stringparm

  244 stringcompare_call: STRINGCOMPARE left_exprparm right_stringparm

  245 stringlength_call: STRINGLENGTH single_exprparm

  246 single_exprparm: '(' expr ')'
  247                | '(' RAWSTRING ')'

  248 sscanf_call: sscanf_buf_fmt ',' sscanf_parmlist ')'

  249 sscanf_buf_fmt: SSCANF '(' expr ',' rawstring_parm

  250 sscanf_parmlist: expr
  251                | sscanf_parmlist ',' expr

  252 receive_call: RECEIVE left_exprparm ')'
  253             | RECEIVE left_exprparm ',' expr ')'

  254 array_var: array_id index_expr

  255 array_id: ident

  256 index_expr: index_expr '[' expr ']'
  257           | '[' expr ']'

  258 typecast: INT '(' expr ')'

  259 ident: IDENTIFIER

  260 newident: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 215
'#' (35) 14
'%' (37) 210
'&' (38) 41
'(' (40) 17 33 119 120 123 129 132 149 153 155 214 229 230 246 247
    249 258
')' (41) 17 33 118 122 129 132 147 149 153 214 229 230 240 241 246
    247 248 252 253 258
'*' (42) 208
'+' (43) 81 199 203
',' (44) 38 67 102 118 122 123 125 231 240 241 248 249 251 253
'-' (45) 80 200 204
'/' (47) 209
':' (58) 138 143
';' (59) 55 56 61 75 76 78 90 97 118 146 154 158 162 163 164 166 172
    173 176
'<' (60) 193
'=' (61) 69 78 181 182
'>' (62) 194
'[' (91) 64 74 256 257
']' (93) 64 74 256 257
'{' (123) 21 22 23 43 52 54 128 144
'}' (125) 21 22 23 43 52 54 98 128 144
error (256) 97 98
UNSIGNED_INT (258) 85
STRING (259) 42 64
RAWSTRING (260) 171 242 247
STRINGCONCAT (261) 239
STRINGCOMPARE (262) 244
STRINGCOPY (263) 243
STRINGLENGTH (264) 245
IDENTIFIER (265) 32 259 260
CHARCON (266) 82 213
INCLUDE (267) 14
FNSTRING (268) 13
NE (269) 197
LE (270) 195
GE (271) 196
EQ (272) 192
OR (273) 184
AND (274) 187
PLPL (275) 217 218
MIMI (276) 219 220
IF (277) 129
ELSE (278) 131
SWITCH (279) 132
CASE (280) 138
DEFAULT (281) 143
WHILE (282) 148 152
DO (283) 150
FOR (284) 155
CBEGIN (285) 161
CONST (286) 78
TYPEDEF (287) 77
VOID (288) 20 30 35
INT (289) 19 62 258
CHAR (290) 63
CONTINUE (291) 162
BREAK (292) 163
RETURN (293) 165
COUT (294) 166
LTLT (295) 167 168
ENDL (296) 170
CIN (297) 172
GTGT (298) 172
MAIN (299) 17
MONITOR (300) 44
INIT (301) 53
ATOMIC (302) 26
SEND (303) 118
RECEIVE (304) 252 253
BROADCAST (305) 121
EXTERN (306) 91
SSCANF (307) 249
SPRINTF (308) 123
LOWER_THAN_ELSE (309)


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
program (76)
    on left: 1 2, on right: 0
init_outerscope (77)
    on left: 3, on right: 1 2
outer_decls (78)
    on left: 4 5, on right: 1 5
outer_decl (79)
    on left: 6 7 8 9 10 11 12, on right: 4 5
include_decl (80)
    on left: 13, on right: 6
start_include (81)
    on left: 14, on right: 13
opt_main_decl (82)
    on left: 15 16, on right: 1 2
main_hdr (83)
    on left: 17, on right: 16
opt_main_type (84)
    on left: 18 19 20, on right: 17
compound_stmt (85)
    on left: 21 22 23, on right: 16 24 104
function_decl (86)
    on left: 24, on right: 7 48
func_proto (87)
    on left: 25 26, on right: 24 55 56 90
func_hdr (88)
    on left: 27 28, on right: 25 26
untyped_func_hdr (89)
    on left: 29, on right: 27
typed_func_hdr (90)
    on left: 30 31, on right: 28
function_id (91)
    on left: 32, on right: 29 30 31
formal_params (92)
    on left: 33, on right: 29 30 31
param_list (93)
    on left: 34 35 36, on right: 33
param_groups (94)
    on left: 37 38, on right: 36 38
param_group (95)
    on left: 39, on right: 37 38
param_typespec (96)
    on left: 40 41 42, on right: 39
monitor_decl (97)
    on left: 43, on right: 8
monitor_hdr (98)
    on left: 44, on right: 43 54
mon_internal_decls (99)
    on left: 45, on right: 43
internal_decls (100)
    on left: 46 47, on right: 45 47
internal_decl (101)
    on left: 48 49 50, on right: 46 47
monitor_init (102)
    on left: 51 52, on right: 45
the_init (103)
    on left: 53, on right: 52
extern_mon_spec (104)
    on left: 54, on right: 94
mon_func_protos (105)
    on left: 55 56, on right: 54 56
var_ext_decls (106)
    on left: 57 58, on right: 21 58
var_ext_decl (107)
    on left: 59 60, on right: 57 58
var_decl (108)
    on left: 61, on right: 11 50 59 92
var_typespec (109)
    on left: 62 63 64 65, on right: 31 40 41 61 75 76 78
var_list (110)
    on left: 66 67, on right: 61 67
var_name (111)
    on left: 68 69 70, on right: 66 67
array_decl (112)
    on left: 71, on right: 70 76 93
index_list (113)
    on left: 72 73, on right: 71 73
index (114)
    on left: 74, on right: 72 73
type_decl (115)
    on left: 75 76, on right: 9
the_typedef (116)
    on left: 77, on right: 75 76
const_decl (117)
    on left: 78, on right: 10 49
constant (118)
    on left: 79 80 81 82, on right: 69 78
unsigned_const (119)
    on left: 83 84, on right: 64 74 79 80 81
unsigned_num (120)
    on left: 85, on right: 83 212
extern_decl (121)
    on left: 86 87 88 89, on right: 12 60
extern_func_decl (122)
    on left: 90, on right: 86
the_extern (123)
    on left: 91, on right: 90 92 93 94
extern_var_decl (124)
    on left: 92, on right: 87
extern_array_decl (125)
    on left: 93, on right: 88
extern_mon_decl (126)
    on left: 94, on right: 89
stmt_list (127)
    on left: 95 96 97 98, on right: 21 22 52 96 135 142 144
opt_for_expr_list (128)
    on left: 99 100, on right: 154
for_expr_list (129)
    on left: 101 102, on right: 100 102 160
stmt (130)
    on left: 103 104 105 106 107 108 109 110 111 112 113 114, on right:
    95 96 127 130 145 146 147
special_proc_calls (131)
    on left: 115 116 117, on right: 114
send_call (132)
    on left: 118, on right: 115
left_exprparm (133)
    on left: 119 120, on right: 118 239 243 244 252 253
broadcast_call (134)
    on left: 121, on right: 116
sprintf_call (135)
    on left: 122, on right: 117
sprintf_buf_fmt (136)
    on left: 123, on right: 122
sprintf_parmlist (137)
    on left: 124 125, on right: 122 125
selection_stmt (138)
    on left: 126 127 128, on right: 103
if_expr (139)
    on left: 129, on right: 126 127
then_stmt (140)
    on left: 130, on right: 126 127
the_else (141)
    on left: 131, on right: 127
switch_hdr (142)
    on left: 132, on right: 128
case_groups (143)
    on left: 133 134, on right: 128 134
case_group (144)
    on left: 135, on right: 133 134
case_hdr_list (145)
    on left: 136 137, on right: 135 137
case_hdr (146)
    on left: 138, on right: 136 137
begin_case (147)
    on left: 139, on right: 138
patch_case_hdrs (148)
    on left: 140, on right: 135
opt_default (149)
    on left: 141 142, on right: 128
the_default (150)
    on left: 143, on right: 142
cobegin_stmt (151)
    on left: 144, on right: 105
iteration_stmt (152)
    on left: 145 146 147, on right: 106
the_while (153)
    on left: 148, on right: 145
while_expr (154)
    on left: 149, on right: 145
the_do (155)
    on left: 150, on right: 146
do_stmt_loc (156)
    on left: 151, on right: 146
the_do_while (157)
    on left: 152, on right: 146
do_while_expr (158)
    on left: 153, on right: 146
for_init (159)
    on left: 154, on right: 147
the_for (160)
    on left: 155, on right: 154
opt_continue_expr (161)
    on left: 156 157, on right: 147
for_semic2 (162)
    on left: 158, on right: 147
opt_iter_exprs (163)
    on left: 159 160, on right: 147
cbegin (164)
    on left: 161, on right: 144
continue_stmt (165)
    on left: 162, on right: 108
break_stmt (166)
    on left: 163, on right: 109
return_stmt (167)
    on left: 164, on right: 110
the_return (168)
    on left: 165, on right: 164
output_stmt (169)
    on left: 166, on right: 111
output_list (170)
    on left: 167 168, on right: 166 168
output_item (171)
    on left: 169 170 171, on right: 167 168
input_stmt (172)
    on left: 172, on right: 112
null_stmt (173)
    on left: 173, on right: 113
opt_expr (174)
    on left: 174 175, on right: 164
expr_stmt (175)
    on left: 176, on right: 107
expr (176)
    on left: 177 178, on right: 101 102 118 120 123 124 125 129 132
    138 149 153 157 169 172 175 176 179 180 214 233 240 246 249 250
    251 253 256 257 258
var_assign (177)
    on left: 179 180, on right: 178
id_becomes (178)
    on left: 181, on right: 179
array_var_becomes (179)
    on left: 182, on right: 180
logical_or_expr (180)
    on left: 183 184, on right: 177 185
left_logical_or_expr (181)
    on left: 185, on right: 184
logical_and_expr (182)
    on left: 186 187, on right: 183 184 188
left_logical_and_expr (183)
    on left: 188, on right: 187
relational_expr (184)
    on left: 189 190, on right: 186 187
left_relational_expr (185)
    on left: 191, on right: 190
relational_op (186)
    on left: 192 193 194 195 196 197, on right: 190
simple_expr (187)
    on left: 198 199 200 201, on right: 189 190 191 202
left_simple_expr (188)
    on left: 202, on right: 201
add_op (189)
    on left: 203 204, on right: 201
term (190)
    on left: 205 206, on right: 198 199 200 201 207
left_term (191)
    on left: 207, on right: 206
mult_op (192)
    on left: 208 209 210, on right: 206
factor (193)
    on left: 211 212 213 214 215, on right: 205 206 215
variable (194)
    on left: 216 217 218 219 220 221 222 223, on right: 211
var_ident (195)
    on left: 224, on right: 216 217 218 219 220
func_call (196)
    on left: 225 226 227, on right: 221
func_id (197)
    on left: 228, on right: 225
actual_params (198)
    on left: 229 230, on right: 225
actuals_list (199)
    on left: 231 232, on right: 230 231
actual_param (200)
    on left: 233, on right: 231 232
stringfn_call (201)
    on left: 234 235 236 237 238, on right: 226
stringconcat_call (202)
    on left: 239, on right: 234
right_stringparm (203)
    on left: 240 241, on right: 239 243 244
rawstring_parm (204)
    on left: 242, on right: 119 123 241 249
stringcopy_call (205)
    on left: 243, on right: 235
stringcompare_call (206)
    on left: 244, on right: 236
stringlength_call (207)
    on left: 245, on right: 237
single_exprparm (208)
    on left: 246 247, on right: 121 245
sscanf_call (209)
    on left: 248, on right: 238
sscanf_buf_fmt (210)
    on left: 249, on right: 248
sscanf_parmlist (211)
    on left: 250 251, on right: 248 251
receive_call (212)
    on left: 252 253, on right: 227
array_var (213)
    on left: 254, on right: 182 222
array_id (214)
    on left: 255, on right: 254
index_expr (215)
    on left: 256 257, on right: 254 256
typecast (216)
    on left: 258, on right: 223
ident (217)
    on left: 259, on right: 65 84 181 224 228 255
newident (218)
    on left: 260, on right: 39 44 68 69 71 75 78


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (init_outerscope)

    program          go to state 1
    init_outerscope  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: init_outerscope . outer_decls opt_main_decl
    2        | init_outerscope . opt_main_decl

    STRING      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    CONST       shift, and go to state 6
    TYPEDEF     shift, and go to state 7
    VOID        shift, and go to state 8
    INT         shift, and go to state 9
    CHAR        shift, and go to state 10
    MONITOR     shift, and go to state 11
    ATOMIC      shift, and go to state 12
    EXTERN      shift, and go to state 13
    '#'         shift, and go to state 14

    MAIN      reduce using rule 18 (opt_main_type)
    $default  reduce using rule 15 (opt_main_decl)

    outer_decls        go to state 15
    outer_decl         go to state 16
    include_decl       go to state 17
    start_include      go to state 18
    opt_main_decl      go to state 19
    main_hdr           go to state 20
    opt_main_type      go to state 21
    function_decl      go to state 22
    func_proto         go to state 23
    func_hdr           go to state 24
    untyped_func_hdr   go to state 25
    typed_func_hdr     go to state 26
    function_id        go to state 27
    monitor_decl       go to state 28
    monitor_hdr        go to state 29
    var_decl           go to state 30
    var_typespec       go to state 31
    type_decl          go to state 32
    the_typedef        go to state 33
    const_decl         go to state 34
    extern_decl        go to state 35
    extern_func_decl   go to state 36
    the_extern         go to state 37
    extern_var_decl    go to state 38
    extern_array_decl  go to state 39
    extern_mon_decl    go to state 40
    ident              go to state 41


State 3

    0 $accept: program $end .

    $default  accept


State 4

   64 var_typespec: STRING . '[' unsigned_const ']'

    '['  shift, and go to state 42


State 5

   32 function_id: IDENTIFIER .
  259 ident: IDENTIFIER .

    IDENTIFIER  reduce using rule 259 (ident)
    $default    reduce using rule 32 (function_id)


State 6

   78 const_decl: CONST . var_typespec newident '=' constant ';'

    STRING      shift, and go to state 4
    IDENTIFIER  shift, and go to state 43
    INT         shift, and go to state 44
    CHAR        shift, and go to state 10

    var_typespec  go to state 45
    ident         go to state 41


State 7

   77 the_typedef: TYPEDEF .

    $default  reduce using rule 77 (the_typedef)


State 8

   20 opt_main_type: VOID .
   30 typed_func_hdr: VOID . function_id formal_params

    IDENTIFIER  shift, and go to state 46

    $default  reduce using rule 20 (opt_main_type)

    function_id  go to state 47


State 9

   19 opt_main_type: INT .
   62 var_typespec: INT .

    IDENTIFIER  reduce using rule 62 (var_typespec)
    $default    reduce using rule 19 (opt_main_type)


State 10

   63 var_typespec: CHAR .

    $default  reduce using rule 63 (var_typespec)


State 11

   44 monitor_hdr: MONITOR . newident

    IDENTIFIER  shift, and go to state 48

    newident  go to state 49


State 12

   26 func_proto: ATOMIC . func_hdr

    STRING      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    VOID        shift, and go to state 50
    INT         shift, and go to state 44
    CHAR        shift, and go to state 10

    func_hdr          go to state 51
    untyped_func_hdr  go to state 25
    typed_func_hdr    go to state 26
    function_id       go to state 27
    var_typespec      go to state 52
    ident             go to state 41


State 13

   91 the_extern: EXTERN .

    $default  reduce using rule 91 (the_extern)


State 14

   14 start_include: '#' . INCLUDE

    INCLUDE  shift, and go to state 53


State 15

    1 program: init_outerscope outer_decls . opt_main_decl
    5 outer_decls: outer_decls . outer_decl

    STRING      shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    CONST       shift, and go to state 6
    TYPEDEF     shift, and go to state 7
    VOID        shift, and go to state 8
    INT         shift, and go to state 9
    CHAR        shift, and go to state 10
    MONITOR     shift, and go to state 11
    ATOMIC      shift, and go to state 12
    EXTERN      shift, and go to state 13
    '#'         shift, and go to state 14

    MAIN      reduce using rule 18 (opt_main_type)
    $default  reduce using rule 15 (opt_main_decl)

    outer_decl         go to state 54
    include_decl       go to state 17
    start_include      go to state 18
    opt_main_decl      go to state 55
    main_hdr           go to state 20
    opt_main_type      go to state 21
    function_decl      go to state 22
    func_proto         go to state 23
    func_hdr           go to state 24
    untyped_func_hdr   go to state 25
    typed_func_hdr     go to state 26
    function_id        go to state 27
    monitor_decl       go to state 28
    monitor_hdr        go to state 29
    var_decl           go to state 30
    var_typespec       go to state 31
    type_decl          go to state 32
    the_typedef        go to state 33
    const_decl         go to state 34
    extern_decl        go to state 35
    extern_func_decl   go to state 36
    the_extern         go to state 37
    extern_var_decl    go to state 38
    extern_array_decl  go to state 39
    extern_mon_decl    go to state 40
    ident              go to state 41


State 16

    4 outer_decls: outer_decl .

    $default  reduce using rule 4 (outer_decls)


State 17

    6 outer_decl: include_decl .

    $default  reduce using rule 6 (outer_decl)


State 18

   13 include_decl: start_include . FNSTRING

    FNSTRING  shift, and go to state 56


State 19

    2 program: init_outerscope opt_main_decl .

    $default  reduce using rule 2 (program)


State 20

   16 opt_main_decl: main_hdr . compound_stmt

    '{'  shift, and go to state 57

    compound_stmt  go to state 58


State 21

   17 main_hdr: opt_main_type . MAIN '(' ')'

    MAIN  shift, and go to state 59


State 22

    7 outer_decl: function_decl .

    $default  reduce using rule 7 (outer_decl)


State 23

   24 function_decl: func_proto . compound_stmt

    '{'  shift, and go to state 57

    compound_stmt  go to state 60


State 24

   25 func_proto: func_hdr .

    $default  reduce using rule 25 (func_proto)


State 25

   27 func_hdr: untyped_func_hdr .

    $default  reduce using rule 27 (func_hdr)


State 26

   28 func_hdr: typed_func_hdr .

    $default  reduce using rule 28 (func_hdr)


State 27

   29 untyped_func_hdr: function_id . formal_params

    '('  shift, and go to state 61

    formal_params  go to state 62


State 28

    8 outer_decl: monitor_decl .

    $default  reduce using rule 8 (outer_decl)


State 29

   43 monitor_decl: monitor_hdr . '{' mon_internal_decls '}'

    '{'  shift, and go to state 63


State 30

   11 outer_decl: var_decl .

    $default  reduce using rule 11 (outer_decl)


State 31

   31 typed_func_hdr: var_typespec . function_id formal_params
   61 var_decl: var_typespec . var_list ';'

    IDENTIFIER  shift, and go to state 64

    function_id  go to state 65
    var_list     go to state 66
    var_name     go to state 67
    array_decl   go to state 68
    newident     go to state 69


State 32

    9 outer_decl: type_decl .

    $default  reduce using rule 9 (outer_decl)


State 33

   75 type_decl: the_typedef . var_typespec newident ';'
   76          | the_typedef . var_typespec array_decl ';'

    STRING      shift, and go to state 4
    IDENTIFIER  shift, and go to state 43
    INT         shift, and go to state 44
    CHAR        shift, and go to state 10

    var_typespec  go to state 70
    ident         go to state 41


State 34

   10 outer_decl: const_decl .

    $default  reduce using rule 10 (outer_decl)


State 35

   12 outer_decl: extern_decl .

    $default  reduce using rule 12 (outer_decl)


State 36

   86 extern_decl: extern_func_decl .

    $default  reduce using rule 86 (extern_decl)


State 37

   90 extern_func_decl: the_extern . func_proto ';'
   92 extern_var_decl: the_extern . var_decl
   93 extern_array_decl: the_extern . array_decl
   94 extern_mon_decl: the_extern . extern_mon_spec

    STRING      shift, and go to state 4
    IDENTIFIER  shift, and go to state 71
    VOID        shift, and go to state 50
    INT         shift, and go to state 44
    CHAR        shift, and go to state 10
    MONITOR     shift, and go to state 11
    ATOMIC      shift, and go to state 12

    func_proto        go to state 72
    func_hdr          go to state 24
    untyped_func_hdr  go to state 25
    typed_func_hdr    go to state 26
    function_id       go to state 27
    monitor_hdr       go to state 73
    extern_mon_spec   go to state 74
    var_decl          go to state 75
    var_typespec      go to state 31
    array_decl        go to state 76
    ident             go to state 41
    newident          go to state 77


State 38

   87 extern_decl: extern_var_decl .

    $default  reduce using rule 87 (extern_decl)


State 39

   88 extern_decl: extern_array_decl .

    $default  reduce using rule 88 (extern_decl)


State 40

   89 extern_decl: extern_mon_decl .

    $default  reduce using rule 89 (extern_decl)


State 41

   65 var_typespec: ident .

    $default  reduce using rule 65 (var_typespec)


State 42

   64 var_typespec: STRING '[' . unsigned_const ']'

    UNSIGNED_INT  shift, and go to state 78
    IDENTIFIER    shift, and go to state 43

    unsigned_const  go to state 79
    unsigned_num    go to state 80
    ident           go to state 81


State 43

  259 ident: IDENTIFIER .

    $default  reduce using rule 259 (ident)


State 44

   62 var_typespec: INT .

    $default  reduce using rule 62 (var_typespec)


State 45

   78 const_decl: CONST var_typespec . newident '=' constant ';'

    IDENTIFIER  shift, and go to state 48

    newident  go to state 82


State 46

   32 function_id: IDENTIFIER .

    $default  reduce using rule 32 (function_id)


State 47

   30 typed_func_hdr: VOID function_id . formal_params

    '('  shift, and go to state 61

    formal_params  go to state 83


State 48

  260 newident: IDENTIFIER .

    $default  reduce using rule 260 (newident)


State 49

   44 monitor_hdr: MONITOR newident .

    $default  reduce using rule 44 (monitor_hdr)


State 50

   30 typed_func_hdr: VOID . function_id formal_params

    IDENTIFIER  shift, and go to state 46

    function_id  go to state 47


State 51

   26 func_proto: ATOMIC func_hdr .

    $default  reduce using rule 26 (func_proto)


State 52

   31 typed_func_hdr: var_typespec . function_id formal_params

    IDENTIFIER  shift, and go to state 46

    function_id  go to state 65


State 53

   14 start_include: '#' INCLUDE .

    $default  reduce using rule 14 (start_include)


State 54

    5 outer_decls: outer_decls outer_decl .

    $default  reduce using rule 5 (outer_decls)


State 55

    1 program: init_outerscope outer_decls opt_main_decl .

    $default  reduce using rule 1 (program)


State 56

   13 include_decl: start_include FNSTRING .

    $default  reduce using rule 13 (include_decl)


State 57

   21 compound_stmt: '{' . var_ext_decls stmt_list '}'
   22              | '{' . stmt_list '}'
   23              | '{' . '}'

    error          shift, and go to state 84
    UNSIGNED_INT   shift, and go to state 78
    STRING         shift, and go to state 4
    STRINGCONCAT   shift, and go to state 85
    STRINGCOMPARE  shift, and go to state 86
    STRINGCOPY     shift, and go to state 87
    STRINGLENGTH   shift, and go to state 88
    IDENTIFIER     shift, and go to state 43
    CHARCON        shift, and go to state 89
    PLPL           shift, and go to state 90
    MIMI           shift, and go to state 91
    IF             shift, and go to state 92
    SWITCH         shift, and go to state 93
    WHILE          shift, and go to state 94
    DO             shift, and go to state 95
    FOR            shift, and go to state 96
    CBEGIN         shift, and go to state 97
    INT            shift, and go to state 98
    CHAR           shift, and go to state 10
    CONTINUE       shift, and go to state 99
    BREAK          shift, and go to state 100
    RETURN         shift, and go to state 101
    COUT           shift, and go to state 102
    CIN            shift, and go to state 103
    SEND           shift, and go to state 104
    RECEIVE        shift, and go to state 105
    BROADCAST      shift, and go to state 106
    EXTERN         shift, and go to state 13
    SSCANF         shift, and go to state 107
    SPRINTF        shift, and go to state 108
    '('            shift, and go to state 109
    '{'            shift, and go to state 57
    '}'            shift, and go to state 110
    ';'            shift, and go to state 111
    '-'            shift, and go to state 112
    '+'            shift, and go to state 113
    '!'            shift, and go to state 114

    compound_stmt          go to state 115
    var_ext_decls          go to state 116
    var_ext_decl           go to state 117
    var_decl               go to state 118
    var_typespec           go to state 119
    unsigned_num           go to state 120
    extern_decl            go to state 121
    extern_func_decl       go to state 36
    the_extern             go to state 37
    extern_var_decl        go to state 38
    extern_array_decl      go to state 39
    extern_mon_decl        go to state 40
    stmt_list              go to state 122
    stmt                   go to state 123
    special_proc_calls     go to state 124
    send_call              go to state 125
    broadcast_call         go to state 126
    sprintf_call           go to state 127
    sprintf_buf_fmt        go to state 128
    selection_stmt         go to state 129
    if_expr                go to state 130
    switch_hdr             go to state 131
    cobegin_stmt           go to state 132
    iteration_stmt         go to state 133
    the_while              go to state 134
    the_do                 go to state 135
    for_init               go to state 136
    the_for                go to state 137
    cbegin                 go to state 138
    continue_stmt          go to state 139
    break_stmt             go to state 140
    return_stmt            go to state 141
    the_return             go to state 142
    output_stmt            go to state 143
    input_stmt             go to state 144
    null_stmt              go to state 145
    expr_stmt              go to state 146
    expr                   go to state 147
    var_assign             go to state 148
    id_becomes             go to state 149
    array_var_becomes      go to state 150
    logical_or_expr        go to state 151
    left_logical_or_expr   go to state 152
    logical_and_expr       go to state 153
    left_logical_and_expr  go to state 154
    relational_expr        go to state 155
    left_relational_expr   go to state 156
    simple_expr            go to state 157
    left_simple_expr       go to state 158
    term                   go to state 159
    left_term              go to state 160
    factor                 go to state 161
    variable               go to state 162
    var_ident              go to state 163
    func_call              go to state 164
    func_id                go to state 165
    stringfn_call          go to state 166
    stringconcat_call      go to state 167
    stringcopy_call        go to state 168
    stringcompare_call     go to state 169
    stringlength_call      go to state 170
    sscanf_call            go to state 171
    sscanf_buf_fmt         go to state 172
    receive_call           go to state 173
    array_var              go to state 174
    array_id               go to state 175
    typecast               go to state 176
    ident                  go to state 177


State 58
